<resources>
    <string name="app_name">iAttend</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="iattend">iAttend</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="code">Code:</string>
    <string name="submit">Submit</string>
    <string name="the_password_will_be_sent_your_email">The Password will be sent your email</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="my_classes">My Classes</string>
    <string name="joined_classes">Joined Classes</string>
    <string name="create_a_class">Create A Class</string>
    <string name="join_a_class">Join A Class</string>
    <string name="register_device">Register Device</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="join_class">Join Class</string>
    <string name="class_code">Class Code:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="days_of_the_week">Days Of the Week</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="start_day">Start Day</string>
    <string name="end_day">End Day</string>
    <string name="join_code">Join Code:</string>
    <string name="set_location">Set Location</string>
    <string name="location_verification">Location Verification</string>
    <string name="code_verification">Code Verification</string>
    <string name="class_name">Class Name:</string>
    <string name="create">Create</string>
</resources>
