<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.WVU.iAttend.RegisterActivity">

    <TextView
        android:id="@+id/createAClassText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/create_a_class"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createAClassText"
        android:layout_marginTop="18dp"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/createAClassParr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/StartTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/start_time"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/StarttimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="0dp"
                android:headerBackground="@color/colorAccent"
                android:timePickerMode="spinner" />


            <TextView
                android:id="@+id/endTImeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:text="@string/end_time"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/endtimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:headerBackground="@color/colorAccent"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/DaysOfTheWeekText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/days_of_the_week"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <CheckBox
                    android:id="@+id/radioButtonMon"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/mon"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonTues"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/tues"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonWed"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/wed"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonThurs"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/thurs"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonFri"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/fri"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonSat"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/sat"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />

                <CheckBox
                    android:id="@+id/radioButtonSun"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:checked="false"
                    android:text="@string/sun"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="7sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/StartDayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/start_day"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/StartDayPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:datePickerMode="spinner"
                android:scaleY="1" />


            <TextView
                android:id="@+id/EndDayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/end_day"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/EndDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:datePickerMode="spinner"
                android:scaleY="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/JoinCodeText"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:text="@string/join_code"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/JoinCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="20sp" />


            </LinearLayout>

            <Button
                android:id="@+id/LocationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/set_location"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/LocationSwitch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:text="@string/location_verification"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/CodeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/code_verification"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ClassName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/class_name"
                android:inputType="textPersonName"
                android:maxLength="29"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/create"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
