<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.WVU.iAttend.UserHomePageActivity">


    <TextView
        android:id="@+id/user_home_text"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="25sp" />

    <Button
        android:id="@+id/user_home_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:text="@string/refresh"

        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_home_refresh"
        android:layout_marginTop="13dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/UserHomeMyClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/my_classes"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/UserHomeJoinedClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/joined_classes"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/UserHomeCreateAClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/create_a_class"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


            <Button
                android:id="@+id/UserHomeJoinAClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/join_a_class"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


            <Button
                android:id="@+id/UserHomeRegisterDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/register_device"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/UserHomeChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/change_password"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/UserHomeLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="@string/logout"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
