<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.WVU.iAttend.RegisterActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:text="@string/register"
        android:id="@+id/regText"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_orange_dark"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:textAllCaps="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/regText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/regFirstName"
                android:hint="@string/first_name"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/regLastName"
                android:hint="@string/last_name"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/regEmail"
                android:hint="@string/email"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/regPassword"
                android:hint="@string/password"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/regPasswordCon"
                android:hint="@string/confirm_password"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/regButton"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
