<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.WVU.iAttend.UserHomePageActivity">


    <TextView
        android:id="@+id/JoinClassText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/join_a_class"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="30sp" />


    <Button
        android:id="@+id/JoinClassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:text="@string/join_class"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/JoinClassBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/JoinClassText"
        android:layout_below="@+id/JoinClassText"
        android:layout_marginTop="146dp"
        android:ems="10"
        android:hint="@string/class_code"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="@color/colorAccent"
        android:textSize="20sp" />


</RelativeLayout>
